@@ -328,7 +328,7 @@ table.records-table tr.unfocused td
 #quicksearchbar
 {
   position: absolute;
-  top: 60px;
+  top: 55px;
   right: 20px;
   width: 182px;
   height: 20px;
