@@ -4,6 +4,7 @@ CHANGELOG RoundCube Webmail
 2008/11/12 (alec)
 ----------
 - Use SORT for searching on servers with SORT capability
+- Added message status filter
 
 2008/11/06 (alec)
 ----------
